# ClinicVoiceReceptionistAgent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  assignment.txt  docker-compose.yml  pyproject.toml  render.yaml
eval-results/: report.json  report.md
evals/: retell_calls.json  sample_calls.json
retell/: agent_prompt.md  booking_subagent_prompt.md  test_cases.json  tools.json
scripts/: export_retell_evaluation.py  update_retell_booking_flow.py
src/clinic_voice/: __init__.py  api.py  config.py  database.py  deploy.py  errors.py  eval_harness.py  main.py  models.py  postgres_constraints.sql  schemas.py  security.py  seed.py  sync_cliniko.py
src/clinic_voice/pms/: __init__.py  base.py  cliniko.py  factory.py  mock.py
src/clinic_voice/services/: __init__.py  appointments.py  availability.py  calls.py  identity.py
tests/: conftest.py  helpers.py  test_availability.py  test_booking_lifecycle.py  test_booking_prompt_contract.py  test_config.py  test_deploy.py  test_eval_harness.py  test_identity_and_recovery.py  test_retell_webhooks.py
